fix: improve browser compatibility and add authentication - remove problematic CORS/cookie settings causing Chrome issues - add basic auth to Prometheus/Grafana/Alertmanager (was completely open) - use consistent admin credentials across all services - protect sensitive cluster metrics and monitoring data

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/ingress.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/ingress.yaml
@@ -9,6 +9,9 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-production
     cert-manager.io/secret-template: |
       {"annotations": {"reflector.v1.k8s.emberstack.com/reflection-allowed": "true", "reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces": "longhorn-system,network,default"}}
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
+    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Prometheus'
 spec:
   ingressClassName: external
   tls:
@@ -37,6 +40,9 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-production
     cert-manager.io/secret-template: |
       {"annotations": {"reflector.v1.k8s.emberstack.com/reflection-allowed": "true", "reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces": "longhorn-system,network,default"}}
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
+    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Grafana'
 spec:
   ingressClassName: external
   tls:
@@ -65,6 +71,9 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-production
     cert-manager.io/secret-template: |
       {"annotations": {"reflector.v1.k8s.emberstack.com/reflection-allowed": "true", "reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces": "longhorn-system,network,default"}}
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
+    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Alertmanager'
 spec:
   ingressClassName: external
   tls:
@@ -82,3 +91,12 @@ spec:
                 name: kube-prometheus-stack-alertmanager
                 port:
                   number: 9093
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: basic-auth
+  namespace: observability
+type: Opaque
+data:
+  auth: YWRtaW46JGFwcjEkYmJYWGpsSTgkOHV0VFlDMDFzbHdIek9EVHdsbEdHLw==  # admin:zNVABzhvS5LIOXbtNr/UAw==
