fix: resolve Grafana datasource default conflict - replace additionalDataSources with explicit datasources configuration - fixes 'Only one datasource per organization can be marked as default' error - ensures correct namespace URLs for Prometheus and Alertmanager

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -67,23 +67,28 @@ spec:
         datasources:
           enabled: true
           searchNamespace: ALL
-      additionalDataSources:
-        - name: Prometheus
-          type: prometheus
-          uid: prometheus
-          url: http://kube-prometheus-stack-prometheus.observability:9090
-          access: proxy
-          isDefault: true
-          jsonData:
-            httpMethod: POST
-            timeInterval: 30s
-        - name: Alertmanager
-          type: alertmanager
-          uid: alertmanager
-          url: http://kube-prometheus-stack-alertmanager.observability:9093
-          access: proxy
-          jsonData:
-            handleGrafanaManagedAlerts: false
+      # Configure data sources with correct namespace URLs
+      forceDeployDatasources: true
+      datasources:
+        datasources.yaml:
+          apiVersion: 1
+          datasources:
+            - name: Prometheus
+              type: prometheus
+              uid: prometheus
+              url: http://kube-prometheus-stack-prometheus.observability:9090
+              access: proxy
+              isDefault: true
+              jsonData:
+                httpMethod: POST
+                timeInterval: 30s
+            - name: Alertmanager
+              type: alertmanager
+              uid: alertmanager
+              url: http://kube-prometheus-stack-alertmanager.observability:9093
+              access: proxy
+              jsonData:
+                handleGrafanaManagedAlerts: false
     prometheus:
       enabled: true
       ingress:
