fix: disable sidecar datasources to prevent default conflict - set sidecar.datasources.enabled=false - prevents duplicate default datasource creation - allows explicit datasources configuration to work properly

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -65,7 +65,7 @@ spec:
           provider:
             foldersFromFilesStructure: true
         datasources:
-          enabled: true
+          enabled: false
           searchNamespace: ALL
       # Configure data sources with correct namespace URLs
       forceDeployDatasources: true
