feat: add democratic-csi NFS driver and Immich platform with TrueNAS integration

--- a/kubernetes/apps/homepage/deployment.yml
+++ b/kubernetes/apps/homepage/deployment.yml
@@ -80,10 +80,14 @@ spec:
               name: homepage-config
               subPath: widgets.yaml
             - mountPath: /app/config/logs
-              name: logs
+              name: homepage-data
+              subPath: logs
+            - mountPath: /app/data
+              name: homepage-data
+              subPath: data
       volumes:
         - name: homepage-config
           configMap:
             name: homepage
-        - name: logs
+        - name: homepage-data
           emptyDir: {}
