--- a/kubernetes/apps/kustomization.yaml
+++ b/kubernetes/apps/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
   - ./flux-system
   - ./kube-system
   - ./longhorn-system
+  - ./media
   - ./network
   - ./observability
   - ./slack-alerts
+  - ./storage
