--- a/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
@@ -9,7 +9,6 @@ metadata:
     kustomize.toolkit.fluxcd.io/name: longhorn
     kustomize.toolkit.fluxcd.io/namespace: flux-system
   annotations:
-    external-dns.alpha.kubernetes.io/exclude: "true"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: basic-auth
     nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Longhorn'
@@ -21,7 +20,7 @@ metadata:
       more_set_headers "X-XSS-Protection: 1; mode=block";
       more_set_headers "Referrer-Policy: strict-origin-when-cross-origin";
 spec:
-  ingressClassName: external
+  ingressClassName: internal
   tls:
     - hosts:
         - longhorn.samboxlab.top
