--- a/kubernetes/apps/media/immich/app/kustomization.yaml
+++ b/kubernetes/apps/media/immich/app/kustomization.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: observability
+namespace: media
 resources:
   - ./helmrelease.yaml
-  - ./ingress.yaml
-  - ./secret.yaml
+  - ./postgresql.yaml
+  - ./redis.yaml
