--- a/kubernetes/apps/storage/democratic-csi/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/app/helmrelease.yaml
@@ -1,28 +1,26 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cilium
+  name: democratic-csi-nfs
 spec:
   interval: 30m
   chart:
     spec:
-      chart: cilium
-      version: 1.17.4
+      chart: democratic-csi
+      version: 0.14.6
       sourceRef:
         kind: HelmRepository
-        name: cilium
+        name: democratic-csi
         namespace: flux-system
   install:
     remediation:
-      retries: -1
+      retries: 3
   upgrade:
     cleanupOnFail: true
     remediation:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: cilium-values
-  values:
-    operator:
-      tolerations: []
+      name: democratic-csi-nfs-config
+      valuesKey: values.yaml
