fix: correct GitRepository references for democratic-csi and Immich kustomizations

--- a/kubernetes/apps/storage/democratic-csi/ks.yaml
+++ b/kubernetes/apps/storage/democratic-csi/ks.yaml
@@ -9,13 +9,11 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: helm-repositories
   path: ./kubernetes/apps/storage/democratic-csi/app
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   wait: false
   interval: 30m
   timeout: 5m
