fix: update Immich PostgreSQL and Redis to use NFS storage

--- a/kubernetes/apps/media/immich/app/postgresql.yaml
+++ b/kubernetes/apps/media/immich/app/postgresql.yaml
@@ -51,8 +51,8 @@ spec:
     persistence:
       data:
         type: persistentVolumeClaim
-        storageClass: longhorn
-        accessMode: ReadWriteOnce
+        storageClass: nfs
+        accessMode: ReadWriteMany
         size: 5Gi
         globalMounts:
           - path: /var/lib/postgresql/data
