--- a/kubernetes/apps/media/immich/app/redis.yaml
+++ b/kubernetes/apps/media/immich/app/redis.yaml
@@ -47,8 +47,8 @@ spec:
     persistence:
       data:
         type: persistentVolumeClaim
-        storageClass: longhorn
-        accessMode: ReadWriteOnce
+        storageClass: nfs
+        accessMode: ReadWriteMany
         size: 1Gi
         globalMounts:
           - path: /data
