fix: Use standardized TLS secret for Immich ingress

--- a/kubernetes/apps/media/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/helmrelease.yaml
@@ -86,7 +86,7 @@ spec:
         tls:
           - hosts:
               - immich.samboxlab.top
-            secretName: immich-tls
+            secretName: samboxlab-top-production-tls
 
     persistence:
       library:
