feat: add homepage deployment with Flux Kustomization

--- a/kubernetes/apps/kustomization.yaml
+++ b/kubernetes/apps/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ./cert-manager
   - ./default
   - ./flux-system
+  - ./homepage
   - ./kube-system
   - ./longhorn-system
   - ./media
