Update homepage with custom configuration and services

--- a/kubernetes/apps/homepage/configmap.yml
+++ b/kubernetes/apps/homepage/configmap.yml
@@ -3,64 +3,211 @@ kind: ConfigMap
 metadata:
   name: homepage
   namespace: myapps
+  labels:
+    app: homepage
 data:
-  settings.yaml: |
-    title: "Home Lab Dashboard"
-    theme: dark
-    color: slate
-    headerStyle: clean
-    hideVersion: true
-
-  services.yaml: |
-    - Monitoring:
-        - Grafana:
-            href: https://grafana.samboxlab.top
-            description: Metrics and monitoring dashboards
-            icon: grafana.png
-        - Prometheus:
-            href: https://prometheus.samboxlab.top
-            description: Metrics collection and alerting
-            icon: prometheus.png
-        - Alertmanager:
-            href: https://alertmanager.samboxlab.top
-            description: Alert routing and management
-            icon: alertmanager.png
-
-    - Storage:
-        - Longhorn:
-            href: https://longhorn.samboxlab.top
-            description: Distributed block storage
-            icon: longhorn.png
-
-  widgets.yaml: |
-    - kubernetes:
-        cluster:
-          show: true
-          cpu: true
-          memory: true
-          showLabel: true
-          label: "cluster"
-        nodes:
-          show: true
-          cpu: true
-          memory: true
-          showLabel: true
-
-  bookmarks.yaml: |
-    - Homelab:
-        - Kubernetes Dashboard:
-            - href: https://dashboard.samboxlab.top
-        - Grafana:
-            - href: https://grafana.samboxlab.top
-
   kubernetes.yaml: |
     mode: cluster
+  settings.yaml: |
+    title: Home Lab Dashboard
 
-  docker.yaml: |
-    # Docker configuration (empty for k8s deployment)
+    background:
+      image: https://cdnb.artstation.com/p/assets/images/images/006/897/659/large/mikael-gustafsson-wallpaper-mikael-gustafsson.jpg
+      blur: sm # sm, md, xl... see https://tailwindcss.com/docs/backdrop-blur
+      saturate: 100 # 0, 50, 100... see https://tailwindcss.com/docs/backdrop-saturate
+      brightness: 50 # 0, 50, 75... see https://tailwindcss.com/docs/backdrop-brightness
+      opacity: 100 # 0-100
 
-  custom.css: |
-    /* Custom CSS for homepage */
+    theme: dark
+    color: slate
 
-  custom.js: |
-    /* Custom JavaScript for homepage */
+    useEqualHeights: true
+
+    layout:
+      Hypervisor:
+        header: true
+        style: row
+        columns: 4
+      Containers:
+        header: true
+        style: row
+        columns: 4
+      DNS:
+        header: true
+        style: row
+        columns: 4
+      Network:
+        header: true
+        style: row
+        columns: 4
+      Remote Access:
+        header: true
+        style: row
+        columns: 4
+      Storage:
+        header: true
+        style: row
+        columns: 4
+      Media:
+        header: true
+        style: row
+        columns: 4
+      Home Automation:
+        header: true
+        style: row
+        columns: 4
+      Other:
+        header: true
+        style: row
+        columns: 4
+  custom.css: ""
+  custom.js: ""
+  bookmarks.yaml: ""
+  services.yaml: |
+    - Hypervisor:
+        - Proxmox:
+            icon: proxmox.svg
+            href: "{{HOMEPAGE_VAR_PROXMOX_URL}}"
+            description: pve1
+            widget:
+                type: proxmox
+                url: "{{HOMEPAGE_VAR_PROXMOX_URL}}"
+                username: "{{HOMEPAGE_VAR_PROXMOX_USER}}"
+                password: "{{HOMEPAGE_VAR_PROXMOX_API_KEY}}"
+                node: odin
+        - Proxmox:
+            icon: proxmox.svg
+            href: "{{HOMEPAGE_VAR_PROXMOX_URL}}"
+            description: oldtown
+            widget:
+                type: proxmox
+                url: "{{HOMEPAGE_VAR_PROXMOX_URL}}"
+                username: "{{HOMEPAGE_VAR_PROXMOX_USER}}"
+                password: "{{HOMEPAGE_VAR_PROXMOX_API_KEY}}"
+                node: oidin
+    - Containers:
+        - Rancher:
+            icon: rancher.svg
+            href: "{{HOMEPAGE_VAR_RACNHER_URL}}"
+            description: k8s
+        - Longhorn:
+            icon: longhorn.svg
+            href: "{{HOMEPAGE_VAR_LONGHORN_URL}}"
+            description: k8s storage
+        - Portainer:
+            icon: portainer.svg
+            href: "{{HOMEPAGE_VAR_PORTAINER_URL}}"
+            description: docker
+            widget:
+                type: portainer
+                url: "{{HOMEPAGE_VAR_PORTAINER_URL}}"
+                env: 2
+                key: "{{HOMEPAGE_VAR_PORTAINER_API_KEY}}"
+    - DNS:
+        - Pi-Hole1:
+            icon: pi-hole.svg
+            href: "{{HOMEPAGE_VAR_PIHOLE_URL_1}}"
+            description: quasar
+            widget:
+                type: pihole
+                url: "{{HOMEPAGE_VAR_PIHOLE_URL_1}}"
+                key: "{{HOMEPAGE_VAR_PIHOLE_API_KEY_1}}"
+        - Pi-Hole2:
+            icon: pi-hole.svg
+            href: "{{HOMEPAGE_VAR_PIHOLE_URL_2}}"
+            description: blazar
+            widget:
+                type: pihole
+                url: "{{HOMEPAGE_VAR_PIHOLE_URL_2}}"
+                key: "{{HOMEPAGE_VAR_PIHOLE_API_KEY_2}}"
+        - Pi-Hole3:
+            icon: pi-hole.svg
+            href: "{{HOMEPAGE_VAR_PIHOLE_URL_3}}"
+            description: electron
+            widget:
+                type: pihole
+                url: "{{HOMEPAGE_VAR_PIHOLE_URL_3}}"
+                key: "{{HOMEPAGE_VAR_PIHOLE_API_KEY_3}}"
+    - Network:
+        - UniFi:
+            icon: unifi.svg
+            href: "{{HOMEPAGE_VAR_UNIFI_NETWORK_URL}}"
+            description: network
+            widget:
+                type: unifi
+                url: "{{HOMEPAGE_VAR_UNIFI_NETWORK_URL}}"
+                username: "{{HOMEPAGE_VAR_UNIFI_NETWORK_USERNAME}}"
+                password: "{{HOMEPAGE_VAR_UNIFI_NETWORK_PASSWORD}}"
+        - Uptime Kuma:
+            icon: uptime-kuma.svg
+            href: "{{HOMEPAGE_VAR_UPTIME_KUMA_URL}}"
+            description: internal
+            widget:
+                type: uptimekuma
+                url: "{{HOMEPAGE_VAR_UPTIME_KUMA_URL}}"
+                slug: home
+        - Uptime Robot:
+            icon: https://play-lh.googleusercontent.com/cUrv0t00FYQ1GKLuOTvv8qjo1lSDjqZC16IOp3Fb6ijew6Br5m4o16HhDp0GBu_Bw8Y=w240-h480-rw
+            href: https://uptimerobot.com/dashboard
+            description: external
+            widget:
+                type: uptimerobot
+                url: https://api.uptimerobot.com
+                key: "{{HOMEPAGE_VAR_UPTIME_ROBOT_API_KEY}}"
+    - Storage:
+        - TrueNAS:
+            icon: truenas.svg
+            href: "{{HOMEPAGE_VAR_TRUENAS_URL}}"
+            description: scale
+            widget:
+                type: truenas
+                url: "{{HOMEPAGE_VAR_TRUENAS_URL}}"
+                key: "{{HOMEPAGE_VAR_TRUENAS_API_KEY}}"
+        - MinIO:
+            icon: minio.svg
+            href: "{{HOMEPAGE_VAR_MINIO_URL}}"
+            description: object storage
+    - Media:
+        - Plex:
+            icon: plex.svg
+            href: "{{HOMEPAGE_VAR_PLEX_URL}}"
+            description: media server
+            widget:
+                type: plex
+                url: "{{HOMEPAGE_VAR_PLEX_URL}}"
+                key: "{{HOMEPAGE_VAR_PLEX_API_TOKEN}}"
+    - Remote Access:
+        - PiKVM:
+            icon: https://avatars.githubusercontent.com/u/41749659?s=200&v=4
+            href: "{{HOMEPAGE_VAR_PIKVM_URL}}"
+            description: remote kvm
+
+        - UniFi:
+            icon: https://play-lh.googleusercontent.com/DmgQvSdocOrGr0D0rxSBE9sqh23Fw3ck3BgKRN788cZnOKgcZlcEAFRYwmUbp6vMTVI
+            href: "{{HOMEPAGE_VAR_UNIFI_PROTECT_URL}}"
+            description: protect
+        - Cogeco Control:
+            icon: https://nwzimg.wezhan.net/contents/sitefiles3606/18030899/images/5430245.png
+            href: "{{HOMEPAGE_VAR_BROADLINK_CONTROL_URL}}"
+            description: light control
+    - Other:
+        - Gitea:
+            icon: gitea.svg
+            href: https://git.local.samboxlab.com
+            description: source code
+        - GitHub:
+            icon: github.svg
+            href: https://github.com/sojay
+            description: source code
+
+  widgets.yaml: |
+    - resources:
+        cpu: true
+        memory: true
+        disk: /
+
+    - datetime:
+        text_size: xl
+        format:
+          timeStyle: short
+  docker.yaml: ""
