--- a/kubernetes/apps/homepage/kustomization.yaml
+++ b/kubernetes/apps/homepage/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yml
   - serviceaccount.yml
   - clusterrole.yml
+  - secret.yml
   - configmap.yml
   - deployment.yml
   - service.yml
