--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /github-deploy.key
 /github-deploy.key.pub
 /github-push-token.txt
+kubernetes/apps/homepage/secret.yml
 # Template config files
 /cluster.yaml
 /nodes.yaml
