--- a/kubernetes/apps/homepage/service.yml
+++ b/kubernetes/apps/homepage/service.yml
@@ -7,14 +7,11 @@ metadata:
     app: homepage
   annotations:
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 3000
-      targetPort: http
+      targetPort: 3000
       protocol: TCP
       name: http
-    - name: https
-      port: 443
-      targetPort: https
   selector:
     app: homepage
