fix: add homepage secret back with proper environment variables

--- a/kubernetes/apps/homepage/configmap.yml
+++ b/kubernetes/apps/homepage/configmap.yml
@@ -107,19 +107,19 @@ data:
         - Pi-Hole1:
             icon: pi-hole.svg
             href: "{{HOMEPAGE_VAR_PIHOLE_URL_1}}"
-            description: quasar
+            description: uHole
             widget:
                 type: pihole
                 url: "{{HOMEPAGE_VAR_PIHOLE_URL_1}}"
                 key: "{{HOMEPAGE_VAR_PIHOLE_API_KEY_1}}"
-        - Pi-Hole2:
-            icon: pi-hole.svg
-            href: "{{HOMEPAGE_VAR_PIHOLE_URL_2}}"
-            description: blazar
-            widget:
-                type: pihole
-                url: "{{HOMEPAGE_VAR_PIHOLE_URL_2}}"
-                key: "{{HOMEPAGE_VAR_PIHOLE_API_KEY_2}}"
+        # - Pi-Hole2:
+        #     icon: pi-hole.svg
+        #     href: "{{HOMEPAGE_VAR_PIHOLE_URL_2}}"
+        #     description: blazar
+        #     widget:
+        #         type: pihole
+        #         url: "{{HOMEPAGE_VAR_PIHOLE_URL_2}}"
+        #         key: "{{HOMEPAGE_VAR_PIHOLE_API_KEY_2}}"
     - Network:
         - UniFi:
             icon: unifi.svg
