--- a/kubernetes/apps/homepage/deployment.yml
+++ b/kubernetes/apps/homepage/deployment.yml
@@ -31,6 +31,9 @@ spec:
           env:
           -  name: HOMEPAGE_ALLOWED_HOSTS
              value: "dashboard.samboxlab.top"
+          envFrom:
+          - secretRef:
+              name: homepage-secret
           resources:
             requests:
               memory: 128Mi
