fix: encrypt homepage secret with SOPS and update pihole URL

--- a/kubernetes/apps/homepage/kustomization.yaml
+++ b/kubernetes/apps/homepage/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - namespace.yml
   - serviceaccount.yml
   - clusterrole.yml
-  - secret.yml
+  - secret.sops.yaml
   - configmap.yml
   - deployment.yml
   - service.yml
