fix: disable kubernetes mode to resolve API JSON parsing errors

--- a/kubernetes/apps/homepage/configmap.yml
+++ b/kubernetes/apps/homepage/configmap.yml
@@ -7,7 +7,7 @@ metadata:
     app: homepage
 data:
   kubernetes.yaml: |
-    mode: cluster
+    mode: disabled
   settings.yaml: |
     title: Home Lab Dashboard
 
